odin recipes weppage with 3 recipes. all pages created and linked together

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Webpage</title>
+    <title>Odin Recipees</title>
 </head>
 <body>
-    <h1>Homepage</h1>
+    <h1>Odin Recipes</h1>
 
-    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+    <a href="recipes/breakfast_bagel.html"> Breakfast Bagel</a>
+    <br>
+    <a href="recipes/grilled_hamburger.html"> Grilled Hamburgers</a>
+    <br>
+    <a href="recipes/field_coffee.html"> Field Coffee</a>
 
-    <a href="./pages/about.html">About</a>
 
-    <img src="./images/dog.jpg" alt="Picture of a Pug" height="310" width="310">
 </body>
 </html>
