"minor update - admin save"

--- a/recipes/grilled_hamburger.html
+++ b/recipes/grilled_hamburger.html
@@ -42,14 +42,14 @@
     <br>
     <h2>Put it all together</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Mix hamburger meat and seasonings</li>
+        <li>Mash meat into equal sized patties and set aside</li>
+        <li>Preheat grill for approximately 5 min</li>
+        <li>Grill burgers to desired style</li>
+        <li>Remove burgers from grill and imediately place cheese on each</li>
+        <li>Add two pieces of bacon per burger</li>
+        <li>Add condiments to taste</li>
+        <li>Enjoy</li>
     </ol>
     </body>
 </html>
