odin project: updated person webpage project in odin with a new css page. buttons and color.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipees</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/breakfast_bagel.html"> Breakfast Bagel</a>
-    <br>
-    <a href="recipes/grilled_hamburger.html"> Grilled Hamburgers</a>
-    <br>
-    <a href="recipes/field_coffee.html"> Field Coffee</a>
+    <div class="buttons">
+        <button><a href="recipes/breakfast_bagel.html"> Breakfast Bagel</a></button>
+        <br>
+        <button><a href="recipes/grilled_hamburger.html"> Grilled Hamburgers</a></button>
+        <br>
+        <button><a href="recipes/field_coffee.html"> Field Coffee</a></button>
+    </div>
+    
 
 
 </body>
