--- a/recipes/grilled_hamburger.html
+++ b/recipes/grilled_hamburger.html
@@ -2,28 +2,37 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Grilled Hamburger Recipe</title>
     </head>
 
     <body>
         <h1>Grilled Hamburger</h1>
         
-        <a href="../index.html">Home</a>
+        <button><a href="../index.html">Home</a></button>
+
         <br>
         <br>
 
     <img src="../images/grilled_hamburger.png" alt="Grilled Hamburger" length="300" width="300">
+    
     <h5>Grilled Hamburger by BuiltWithRobK</h5>
+
     <br>
+
     <h1>Description</h1>
+
     <p>
         Built to be the best simple hamburger with the most flavor while still being
         easy to prep and easy to eat. Take care not to over cook, as this can throw
         the flavor off. Inspired by an easy way to gather together over a simple meal. 
         It's intended to be shared and enjoyed with friends... It adds to the flavor.
     </p>
+
     <br>
+
     <h1>Ingredients</h1>
+
     <ul>
         <li>Buns</li>
         <li>1lb lean meat</li>
@@ -39,8 +48,11 @@
         <li>Mustard</li>
         <li>Cheese of choice (Munster recomended)</li>
     </ul>
+
     <br>
+
     <h2>Put it all together</h2>
+
     <ol>
         <li>Mix hamburger meat and seasonings</li>
         <li>Mash meat into equal sized patties and set aside</li>
@@ -51,5 +63,6 @@
         <li>Add condiments to taste</li>
         <li>Enjoy</li>
     </ol>
+
     </body>
 </html>
